Increased window z-indexing to prevent window collision issues after clicking away from a window so many times

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ body{
   display: flex;
   justify-content: space-between;
   overflow: hidden;
-  z-index: 20;
+  z-index: 2000;
 }
 
 .taskbarIcon {
